--- a/src/ArmedMFG.Web/Areas/Identity/Pages/Account/Login.cshtml
+++ b/src/ArmedMFG.Web/Areas/Identity/Pages/Account/Login.cshtml
@@ -47,10 +47,10 @@
                         Note that for demo purposes you don't need to register and can login with these credentials:
                     </p>
                     <p>
-                        User:     <b>demouser@microsoft.com</b> OR <b>admin@microsoft.com</b>
+                        User:     <b>demouser@armeduz.onmicrosoft.com</b> OR <b>admin@armeduz.onmicrosoft.com</b>
                     </p>
                     <p>
-                        Password: <b>Pass@word1</b>
+                        Password: <b>Rustam022001@@</b>
                     </p>
                 </form>
             </section>
