--- a/src/ArmedMFG.BlazorAdmin/Shared/MainLayout.razor
+++ b/src/ArmedMFG.BlazorAdmin/Shared/MainLayout.razor
@@ -13,7 +13,7 @@
 <div class="main">
    
     <div class="top-row px-4">
-        <a href="https://github.com/dotnet-architecture/eShopOnArmedMFG.Web" target="_blank" class="ml-md-auto">About eShopOnArmedMFG.Web</a>
+        <a href="" target="_blank" class="ml-md-auto">About ArmedMFG Admin</a>
     </div>
 
     <div class="content px-4">
