--- a/src/ArmedMFG.BlazorAdmin/Shared/NavMenu.razor
+++ b/src/ArmedMFG.BlazorAdmin/Shared/NavMenu.razor
@@ -1,6 +1,6 @@
 ﻿@inherits BlazorAdmin.Helpers.BlazorComponent
 <div class="top-row pl-4 navbar navbar-dark">
-    <a class="navbar-brand" href="">eShopOnArmedMFG.Web Admin</a>
+    <a class="navbar-brand" href="">ArmedMFG Admin</a>
     <button class="navbar-toggler" @onclick="ToggleNavMenu">
         <span class="navbar-toggler-icon"></span>
     </button>
@@ -13,11 +13,28 @@
                 <span class="oi oi-home" aria-hidden="true"></span> Home
             </NavLink>
         </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="admin/catalog-items" Match="NavLinkMatch.All">
+                <span class="oi oi-home" aria-hidden="true"></span> Catalog Items
+            </NavLink>
+        </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="admin/product-types" Match="NavLinkMatch.All">
+                <span class="oi oi-home" aria-hidden="true"></span> Product Types
+            </NavLink>
+        </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="admin/material-types" Match="NavLinkMatch.All">
+                <span class="oi oi-home" aria-hidden="true"></span> Material Types
+            </NavLink>
+        </li>
         <AuthorizeView>
             <Authorized>
                 <li class="nav-item px-3">
                     <NavLink class="nav-link" href="manage/my-account" Match="NavLinkMatch.All">
-                        <span class="oi oi-person" aria-hidden="true"></span>                         @context.User.Identity.Name
+                        <span class="oi oi-person" aria-hidden="true"></span>                         
+                        Admin
+                        @* @context.User.Identity.Name *@
 
                     </NavLink>
                 </li>
