--- a/src/ArmedMFG.BlazorAdmin/Pages/MaterialTypePage/List.razor
+++ b/src/ArmedMFG.BlazorAdmin/Pages/MaterialTypePage/List.razor
@@ -1,13 +1,13 @@
-﻿@page "/admin/product-types"
+﻿@page "/admin/material-types"
 @attribute [Authorize(Roles = ArmedMFG.BlazorShared.Authorization.Constants.Roles.ADMINISTRATORS)]
 @inherits ArmedMFG.BlazorAdmin.Helpers.BlazorComponent
-@namespace ArmedMFG.BlazorAdmin.Pages.ProductTypePage
+@namespace ArmedMFG.BlazorAdmin.Pages.MaterialTypePage
 
 <PageTitle>ArmedMFG Admin</PageTitle>
 
-<h1>Manage Product Types</h1>
+<h1>Manage Material Types</h1>
 
-@if (productTypes == null)
+@if (materialTypes == null)
 {
     <Spinner></Spinner>
 }
@@ -23,27 +23,23 @@ else
     <table class="table table-striped table-hover">
         <thead>
         <tr>
-            <th></th>
-            <th>Category</th>
             <th>Id</th>
             <th>Name</th>
-            <th>@nameof(ProductType.Description)</th>
-            <th>@nameof(ProductType.CurrentPrice)</th>
+            <th>Category</th>
+            <th>@nameof(MaterialType.Description)</th>
+            <th>@nameof(MaterialType.CurrentAmount)</th>
             <th>Actions</th>
         </tr>
         </thead>
         <tbody class="cursor-pointer">
-        @foreach (var item in productTypes)
+        @foreach (var item in materialTypes)
         {
             <tr @onclick="@(() => DetailsClick(item.Id))">
-                <td>
-                    <img class="img-thumbnail" src="@($"{item.PictureUri}")">
-                </td>
-                <td>@item.ProductCategory</td>
                 <td>@item.Id</td>
                 <td>@item.Name</td>
+                <td>@item.MaterialCategory</td>
                 <td>@item.Description</td>
-                <td>@item.CurrentPrice</td>
+                <td>@item.CurrentAmount</td>
                 <td>
                     <button @onclick="@(() => EditClick(item.Id))" @onclick:stopPropagation="true" class="btn btn-primary">
                         Edit
@@ -58,8 +54,8 @@ else
         </tbody>
     </table>
     
-    <Details Categories="@productCategories" OnEditClick="EditClick" @ref="DetailsComponent"></Details>
-    <Edit Categories="@productCategories" OnSaveClick="ReloadProductTypes" @ref="EditComponent"></Edit>
-    <Create Categories ="@productCategories" OnSaveClick="ReloadProductTypes" @ref="CreateComponent"></Create>
-    <Delete Categories ="@productCategories" OnSaveClick="ReloadProductTypes" @ref="DeleteComponent"></Delete>
+    <Details Categories="@materialCategories" OnEditClick="EditClick" @ref="DetailsComponent"></Details>
+    <Edit Categories="@materialCategories" OnSaveClick="ReloadMaterialTypes" @ref="EditComponent"></Edit>
+    <Create Categories ="@materialCategories" OnSaveClick="ReloadMaterialTypes" @ref="CreateComponent"></Create>
+    <Delete Categories ="@materialCategories" OnSaveClick="ReloadMaterialTypes" @ref="DeleteComponent"></Delete>
 }
