--- a/src/ArmedMFG.BlazorAdmin/Shared/NavMenu.razor
+++ b/src/ArmedMFG.BlazorAdmin/Shared/NavMenu.razor
@@ -18,16 +18,77 @@
                 <span class="oi oi-home" aria-hidden="true"></span> Catalog Items
             </NavLink>
         </li>
+        
+       <li class="nav-item px-3">
+                   <NavLink class="nav-link" @onclick="() => ToggleSubmenu(ProductProducingNavSubmenu.First)">
+                       <span class="oi oi-list-rich" aria-hidden="true"></span> Product Producing
+                   </NavLink>
+               </li>
+       
+               @if (_productProducingNavSubmenu == ProductProducingNavSubmenu.First)
+               {
+                   <li class="nav-item px-5">
+                       <NavLink class="nav-link" href="admin/product-producing" Match="NavLinkMatch.All">
+                           <span class="oi oi-plus" aria-hidden="true"></span> List
+                       </NavLink>
+                   </li>
+                   <li class="nav-item px-5">
+                       <NavLink class="nav-link" href="admin/product-price">
+                           <span class="oi oi-list-rich" aria-hidden="true"></span> Price History
+                       </NavLink>
+                   </li>
+               } 
+        
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="admin/product-types" Match="NavLinkMatch.All">
-                <span class="oi oi-home" aria-hidden="true"></span> Product Types
+            <NavLink class="nav-link" @onclick="() => ToggleSubmenu(ProductTypesNavSubmenu.First)">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Product Types
             </NavLink>
         </li>
+
+        @if (_productTypesNavSubmenu == ProductTypesNavSubmenu.First)
+        {
+            <li class="nav-item px-5">
+                <NavLink class="nav-link" href="admin/product-types" Match="NavLinkMatch.All">
+                    <span class="oi oi-plus" aria-hidden="true"></span> List
+                </NavLink>
+            </li>
+            <li class="nav-item px-5">
+                <NavLink class="nav-link" href="admin/product-price">
+                    <span class="oi oi-list-rich" aria-hidden="true"></span> Price History
+                </NavLink>
+            </li>
+        }
+                
+        @* <li class="nav-item px-3"> *@
+        @*     <NavLink class="nav-link" href="admin/product-types" Match="NavLinkMatch.All"> *@
+        @*         <span class="oi oi-home" aria-hidden="true"></span> Product Types *@
+        @*     </NavLink> *@
+        @* </li> *@
+        
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="admin/material-types" Match="NavLinkMatch.All">
-                <span class="oi oi-home" aria-hidden="true"></span> Material Types
+            <NavLink class="nav-link" @onclick="() => ToggleSubmenu(MaterialTypesNavSubmenu.First)">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Material Types
             </NavLink>
         </li>
+
+        @if (_materialTypesNavSubmenu == MaterialTypesNavSubmenu.First)
+        {
+            <li class="nav-item px-5">
+                <NavLink class="nav-link" href="admin/material-types" Match="NavLinkMatch.All">
+                    <span class="oi oi-plus" aria-hidden="true"></span> List
+                </NavLink>
+            </li>
+            <li class="nav-item px-5">
+                <NavLink class="nav-link" href="admin/material-supply">
+                    <span class="oi oi-list-rich" aria-hidden="true"></span> Supply
+                </NavLink>
+            </li>
+        }
+        @* <li class="nav-item px-3"> *@
+        @*     <NavLink class="nav-link" href="admin/material-types" Match="NavLinkMatch.All"> *@
+        @*         <span class="oi oi-home" aria-hidden="true"></span> Material Types *@
+        @*     </NavLink> *@
+        @* </li> *@
         <AuthorizeView>
             <Authorized>
                 <li class="nav-item px-3">
@@ -49,7 +110,31 @@
 </div>
 
 @code {
+    private enum ProductProducingNavSubmenu
+    {
+        None,
+        First,
+        Second
+    }
+    
+    private enum ProductTypesNavSubmenu
+    {
+        None,
+        First,
+        Second
+    }
 
+    private enum MaterialTypesNavSubmenu
+    {
+        None,
+        First,
+        Second
+    }
+    
+    private ProductProducingNavSubmenu _productProducingNavSubmenu = ProductProducingNavSubmenu.None;
+    private ProductTypesNavSubmenu _productTypesNavSubmenu =  ProductTypesNavSubmenu.None;
+    private MaterialTypesNavSubmenu _materialTypesNavSubmenu = MaterialTypesNavSubmenu.None;
+    
     private bool collapseNavMenu = true;
 
     private string NavMenuCssClass => collapseNavMenu ? "collapse" : null;
@@ -57,5 +142,29 @@
     private void ToggleNavMenu()
     {
         collapseNavMenu = !collapseNavMenu;
+    }
+    
+    private void ToggleSubmenu(ProductTypesNavSubmenu productTypesNavSubmenu)
+    {
+        if (_productTypesNavSubmenu == productTypesNavSubmenu)
+            _productTypesNavSubmenu = ProductTypesNavSubmenu.None;
+        else
+            _productTypesNavSubmenu = productTypesNavSubmenu;
+    } 
+    
+    private void ToggleSubmenu(MaterialTypesNavSubmenu materialTypesNavSubmenu)
+    {
+        if (_materialTypesNavSubmenu == materialTypesNavSubmenu)
+            _materialTypesNavSubmenu = MaterialTypesNavSubmenu.None;
+        else
+            _materialTypesNavSubmenu = materialTypesNavSubmenu;
+    }
+
+    private void ToggleSubmenu(ProductProducingNavSubmenu productProducingNavSubmenu)
+    {
+        if (_productProducingNavSubmenu == productProducingNavSubmenu)
+            _productProducingNavSubmenu = ProductProducingNavSubmenu.None;
+        else
+            _productProducingNavSubmenu = productProducingNavSubmenu;
     }
 }
