--- a/src/ArmedMFG.Web/Pages/Admin/Index.cshtml
+++ b/src/ArmedMFG.Web/Pages/Admin/Index.cshtml
@@ -1,11 +1,11 @@
-﻿@page
+﻿@page "/admin/{*action}"
 @using ArmedMFG.BlazorAdmin
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 
 @{
     Layout = null;
-    ViewData["Title"] = "Admin - Catalog";
+    ViewData["Title"] = "ArmedMFG Admin";
 }
 
 
