Add Organization and Client models with partial endpoints implementation

--- a/src/ArmedMFG.BlazorAdmin/Pages/ProducedProductsPages/Create.razor
+++ b/src/ArmedMFG.BlazorAdmin/Pages/ProducedProductsPages/Create.razor
@@ -180,7 +180,7 @@
     public async Task Open()
     {
     
-        Logger.LogInformation("Now loading... /ProductBatch/Create");
+        Logger.LogInformation("Now loading... /ProductBatches/Create");
 
         await new Css(JSRuntime).HideBodyOverflow();
 
