--- a/src/ArmedMFG.BlazorAdmin/Pages/ProducedProductsPages/Create.razor
+++ b/src/ArmedMFG.BlazorAdmin/Pages/ProducedProductsPages/Create.razor
@@ -54,8 +54,8 @@
                                     </tbody>
                                 </table>
                                 <form class="form-inline">
-                                    <div class="form-group">
-                                        <InputSelect @bind-Value="_producedProduct.ProductTypeId" class="form-control">
+                                    <div class="form-group mb-2">
+                                        <InputSelect @bind-Value="_producedProduct.ProductTypeId" class="form-control sm-2">
                                             @foreach (var type in ProductTypes)
                                             {
                                                 <option value="@type.Id">@type.Name</option>
@@ -63,11 +63,12 @@
                                         </InputSelect>
                                         <ValidationMessage For="(() => _producedProduct.ProductTypeId)" />
                                     </div>
-                                    <div class="form-group">
-                                        <InputNumber @bind-Value="_producedProduct.Quantity" class="form-control" />
+                                    <div class="form-group mb-2">
+                                        <InputNumber @bind-Value="_producedProduct.Quantity" class="form-control sm-2" />
                                         <ValidationMessage For="(() => _producedProduct.Quantity)" />
                                     </div>
-                                    <button type="button" class="btn btn-primary" data-dismiss="modal" @onclick="AddProducedProductClick">Add</button>
+                                    <button type="button" class="btn btn-secondary mb-2" @onclick="ClearProducedProducts">Clear</button>
+                                    <button type="button" class="btn btn-primary mb-2" @onclick="AddProducedProductClick">Add</button>
                                 </form>
                                 
                                 <table class="table table-striped table-hover">
@@ -101,6 +102,7 @@
                                         <InputNumber @bind-Value="_spentMaterial.Amount" class="form-control" />
                                         <ValidationMessage For="(() => _spentMaterial.Amount)" />
                                     </div>
+                                    <button type="button" class="btn btn-secondary" data-dismiss="modal" @onclick="ClearSpentMaterials">Clear</button>
                                     <button type="button" class="btn btn-primary" data-dismiss="modal" @onclick="AddSpentMaterialClick">Add</button>
                                 </form>
                             </div>
@@ -175,6 +177,16 @@
             MaterialTypeId = MaterialTypes.First().Id,
             Amount = 50
         };
+    }
+
+    public void ClearSpentMaterials()
+    {
+        _spentMaterials.Clear();
+    }
+
+    public void ClearProducedProducts()
+    {
+        _producedProducts.Clear();
     }
 
     public async Task Open()
