--- a/src/ArmedMFG.BlazorAdmin/Shared/NavMenu.razor
+++ b/src/ArmedMFG.BlazorAdmin/Shared/NavMenu.razor
@@ -19,33 +19,53 @@
             </NavLink>
         </li>
         
-       <li class="nav-item px-3">
-                   <NavLink class="nav-link" @onclick="() => ToggleSubmenu(ProductProducingNavSubmenu.First)">
-                       <span class="oi oi-list-rich" aria-hidden="true"></span> Product Producing
-                   </NavLink>
-               </li>
-       
-               @if (_productProducingNavSubmenu == ProductProducingNavSubmenu.First)
-               {
-                   <li class="nav-item px-5">
-                       <NavLink class="nav-link" href="admin/product-producing" Match="NavLinkMatch.All">
-                           <span class="oi oi-plus" aria-hidden="true"></span> List
-                       </NavLink>
-                   </li>
-                   <li class="nav-item px-5">
-                       <NavLink class="nav-link" href="admin/product-price">
-                           <span class="oi oi-list-rich" aria-hidden="true"></span> Price History
-                       </NavLink>
-                   </li>
-               } 
+        <li class="nav-item px-3">
+           <NavLink class="nav-link" @onclick="() => _customersNavSubmenu.Toggle(NavSubmenuStatus.First)">
+               <span class="oi oi-list-rich" aria-hidden="true"></span> Customers
+           </NavLink>
+       </li>
+
+       @if (_customersNavSubmenu.Status == NavSubmenuStatus.First)
+       {
+           <li class="nav-item px-5">
+               <NavLink class="nav-link" href="admin/customers" Match="NavLinkMatch.All">
+                   <span class="oi oi-plus" aria-hidden="true"></span> List
+               </NavLink>
+           </li>
+           <li class="nav-item px-5">
+               <NavLink class="nav-link" href="admin/customers/organizations">
+                   <span class="oi oi-list-rich" aria-hidden="true"></span> Organizations
+               </NavLink>
+           </li>
+       } 
         
         <li class="nav-item px-3">
-            <NavLink class="nav-link" @onclick="() => ToggleSubmenu(ProductTypesNavSubmenu.First)">
+           <NavLink class="nav-link" @onclick="() => _productProducingNavSubmenu.Toggle(NavSubmenuStatus.First)">
+               <span class="oi oi-list-rich" aria-hidden="true"></span> Product Producing
+           </NavLink>
+       </li>
+
+       @if (_productProducingNavSubmenu.Status == NavSubmenuStatus.First)
+       {
+           <li class="nav-item px-5">
+               <NavLink class="nav-link" href="admin/product-producing" Match="NavLinkMatch.All">
+                   <span class="oi oi-plus" aria-hidden="true"></span> List
+               </NavLink>
+           </li>
+           <li class="nav-item px-5">
+               <NavLink class="nav-link" href="admin/product-price">
+                   <span class="oi oi-list-rich" aria-hidden="true"></span> Price History
+               </NavLink>
+           </li>
+       } 
+        
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" @onclick="() => _productTypesNavSubmenu.Toggle(NavSubmenuStatus.First)">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Product Types
             </NavLink>
         </li>
 
-        @if (_productTypesNavSubmenu == ProductTypesNavSubmenu.First)
+        @if (_productTypesNavSubmenu.Status == NavSubmenuStatus.First)
         {
             <li class="nav-item px-5">
                 <NavLink class="nav-link" href="admin/product-types" Match="NavLinkMatch.All">
@@ -66,12 +86,12 @@
         @* </li> *@
         
         <li class="nav-item px-3">
-            <NavLink class="nav-link" @onclick="() => ToggleSubmenu(MaterialTypesNavSubmenu.First)">
+            <NavLink class="nav-link" @onclick="() => _materialTypesNavSubmenu.Toggle(NavSubmenuStatus.First)">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Material Types
             </NavLink>
         </li>
 
-        @if (_materialTypesNavSubmenu == MaterialTypesNavSubmenu.First)
+        @if (_materialTypesNavSubmenu.Status == NavSubmenuStatus.First)
         {
             <li class="nav-item px-5">
                 <NavLink class="nav-link" href="admin/material-types" Match="NavLinkMatch.All">
@@ -100,40 +120,21 @@
                     </NavLink>
                 </li>
                 <li class="nav-item px-3">
-                        <NavLink class="nav-link" href="logout">
-                            <span class="oi oi-account-logout" aria-hidden="true"></span> Logout
-                        </NavLink>
+                    <NavLink class="nav-link" href="logout">
+                        <span class="oi oi-account-logout" aria-hidden="true"></span> Logout
+                    </NavLink>
                 </li>
             </Authorized>
         </AuthorizeView>
     </ul>
 </div>
 
-@code {
-    private enum ProductProducingNavSubmenu
-    {
-        None,
-        First,
-        Second
-    }
-    
-    private enum ProductTypesNavSubmenu
-    {
-        None,
-        First,
-        Second
-    }
-
-    private enum MaterialTypesNavSubmenu
-    {
-        None,
-        First,
-        Second
-    }
-    
-    private ProductProducingNavSubmenu _productProducingNavSubmenu = ProductProducingNavSubmenu.None;
-    private ProductTypesNavSubmenu _productTypesNavSubmenu =  ProductTypesNavSubmenu.None;
-    private MaterialTypesNavSubmenu _materialTypesNavSubmenu = MaterialTypesNavSubmenu.None;
+@code 
+{
+    private NavSubmenu _customersNavSubmenu = new NavSubmenu();
+    private NavSubmenu _productProducingNavSubmenu = new NavSubmenu();
+    private NavSubmenu _productTypesNavSubmenu = new NavSubmenu();
+    private NavSubmenu _materialTypesNavSubmenu = new NavSubmenu();
     
     private bool collapseNavMenu = true;
 
@@ -142,29 +143,5 @@
     private void ToggleNavMenu()
     {
         collapseNavMenu = !collapseNavMenu;
-    }
-    
-    private void ToggleSubmenu(ProductTypesNavSubmenu productTypesNavSubmenu)
-    {
-        if (_productTypesNavSubmenu == productTypesNavSubmenu)
-            _productTypesNavSubmenu = ProductTypesNavSubmenu.None;
-        else
-            _productTypesNavSubmenu = productTypesNavSubmenu;
-    } 
-    
-    private void ToggleSubmenu(MaterialTypesNavSubmenu materialTypesNavSubmenu)
-    {
-        if (_materialTypesNavSubmenu == materialTypesNavSubmenu)
-            _materialTypesNavSubmenu = MaterialTypesNavSubmenu.None;
-        else
-            _materialTypesNavSubmenu = materialTypesNavSubmenu;
-    }
-
-    private void ToggleSubmenu(ProductProducingNavSubmenu productProducingNavSubmenu)
-    {
-        if (_productProducingNavSubmenu == productProducingNavSubmenu)
-            _productProducingNavSubmenu = ProductProducingNavSubmenu.None;
-        else
-            _productProducingNavSubmenu = productProducingNavSubmenu;
     }
 }
