--- a/src/ArmedMFG.BlazorAdmin/Shared/NavMenu.razor
+++ b/src/ArmedMFG.BlazorAdmin/Shared/NavMenu.razor
@@ -73,7 +73,7 @@
                 </NavLink>
             </li>
             <li class="nav-item px-5">
-                <NavLink class="nav-link" href="admin/product-price">
+                <NavLink class="nav-link" href="admin/product-types/prices">
                     <span class="oi oi-list-rich" aria-hidden="true"></span> Price History
                 </NavLink>
             </li>
@@ -99,8 +99,8 @@
                 </NavLink>
             </li>
             <li class="nav-item px-5">
-                <NavLink class="nav-link" href="admin/material-supply">
-                    <span class="oi oi-list-rich" aria-hidden="true"></span> Supply
+                <NavLink class="nav-link" href="admin/material-types/supplies">
+                    <span class="oi oi-list-rich" aria-hidden="true"></span> Supplies
                 </NavLink>
             </li>
         }
