--- a/src/ArmedMFG.BlazorAdmin/Pages/CustomerOrganizationsPage/Create.razor
+++ b/src/ArmedMFG.BlazorAdmin/Pages/CustomerOrganizationsPage/Create.razor
@@ -12,7 +12,7 @@
             <EditForm Model="_organization" OnValidSubmit="@CreateClick">
                 <DataAnnotationsValidator />
                 <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">Create</h5>
+                    <h5 class="modal-title" id="exampleModalLabel">Create Organization</h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close" @onclick="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
