--- a/src/ArmedMFG.BlazorAdmin/Pages/CustomerOrganizationsPage/Delete.razor
+++ b/src/ArmedMFG.BlazorAdmin/Pages/CustomerOrganizationsPage/Delete.razor
@@ -10,7 +10,7 @@
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">Delete Customer</h5>
+                <h5 class="modal-title" id="exampleModalLabel">Delete Organization with ID: @_organization.Id</h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close" @onclick="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
