--- a/src/ArmedMFG.BlazorAdmin/Pages/CustomersPages/List.razor
+++ b/src/ArmedMFG.BlazorAdmin/Pages/CustomersPages/List.razor
@@ -5,7 +5,7 @@
 
 <PageTitle>ArmedMFG Admin</PageTitle>
 
-<h1>Manage </h1>
+<h1>Список Клиентов</h1>
 
 @if (_customers == null)
 {
@@ -16,18 +16,18 @@ else
     
     <p class="esh-link-wrapper">
         <button class="btn btn-primary" @onclick="@(CreateClick)">
-            Create New
+            Добавить
         </button>
     </p>
 
     <table class="table table-striped table-hover">
         <thead>
         <tr>
-            <th>Id</th>
-            <th>FullName</th>
-            <th>Phone Number</th>
-            <th>Organization</th>
-            <th>Actions</th>
+            <th>ID</th>
+            <th>Полное Имя</th>
+            <th>Номер Телефона</th>
+            <th>Организация</th>
+            <th>Действия</th>
         </tr>
         </thead>
         <tbody class="cursor-pointer">
@@ -40,11 +40,11 @@ else
                 <td>@customer.Organization</td>
                 <td>
                     <button @onclick="@(() => EditClick(customer.Id))" @onclick:stopPropagation="true" class="btn btn-primary">
-                        Edit
+                        Изменить
                     </button>
 
                     <button @onclick="@(() => DeleteClick(customer.Id))" @onclick:stopPropagation="true" class="btn btn-danger">
-                        Delete
+                        Удалить
                     </button>
                 </td>
             </tr>
