--- a/src/ArmedMFG.BlazorAdmin/wwwroot/css/admin.css
+++ b/src/ArmedMFG.BlazorAdmin/wwwroot/css/admin.css
@@ -218,7 +218,7 @@ a, .btn-link {
 
     .sidebar {
         width: 250px;
-        height: 100vh;
+        height: 100%;
         position: sticky;
         top: 0;
     }
@@ -241,4 +241,41 @@ a, .btn-link {
         /* Never collapse the sidebar for wide screens */
         display: block;
     }
+}
+
+/* Autocomplete */
+.autocomplete {
+    position: relative;
+}
+.autocomplete .options {
+    position: absolute;
+    top: 40px;
+    left: 0;
+    background: white;
+    width: 100%;
+    padding: 0;
+    z-index: 10;
+    border: 1px solid #ced4da;
+    border-radius: 0.5rem;
+    box-shadow: 0 30px 25px 8px rgba(0, 0, 0, 0.1);
+}
+.autocomplete .option {
+    display: block;
+    padding: 0.25rem;
+}
+.autocomplete .option .option-text {
+    padding: 0.25rem 0.5rem;
+}
+.autocomplete .option:hover {
+    background: #1E90FF;
+    color: #fff;
+}
+.autocomplete .option.disabled {
+    background-color: lightgrey;
+    cursor: not-allowed;
+}
+.autocomplete .option.disabled:hover {
+    background: lightgrey;
+    color: black;
+    /*color: var(--bs-body);*/
 }
