--- a/src/ArmedMFG.BlazorAdmin/Pages/OrderShipmentPage/Delete.razor
+++ b/src/ArmedMFG.BlazorAdmin/Pages/OrderShipmentPage/Delete.razor
@@ -1,22 +1,22 @@
 ﻿@inject ILogger<Delete> Logger
 @inject IJSRuntime JSRuntime
-@inject IOrderService OrderService
+@inject IOrderShipmentService OrderShipmentService
 
 @inherits ArmedMFG.BlazorAdmin.Helpers.BlazorComponent
 
-@namespace ArmedMFG.BlazorAdmin.Pages.OrderPage
+@namespace ArmedMFG.BlazorAdmin.Pages.OrderShipmentPage
 
 <div class="modal @_modalClass" tabindex="-1" role="dialog" style="display:@_modalDisplay">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel">Удалить Заказ</h5>
+                <h5 class="modal-title" id="exampleModalLabel">Удалить Запись Отправки</h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close" @onclick="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
             <div class="modal-body">
-                @if (_order == null)
+                @if (_orderShipment == null)
                 {
                     <Spinner></Spinner>
                 }
@@ -26,58 +26,48 @@
                         <div class="row">
                             <dl class="col-md-12 dl-horizontal">
                                 <dt>
-                                    Дата Заказа
+                                    Дата Отправки
                                 </dt>
 
                                 <dd>
-                                    @_order.OrderedDate
+                                    @_orderShipment.ShipmentDate
                                 </dd>
                                 
                                 <dt>
-                                    Дата Выполнения требуемая заказчиком
+                                    Имя Водителя
                                 </dt>
                                 
                                 <dd>
-                                    @_order.RequiredDate
-                                </dd>
-                                
-                                @if(_order.Status == 5) 
-                                {
-                                    <dt>
-                                        Дата Завершения
-                                    </dt>
-                                    
-                                    <dd>
-                                        @_order.FinishedDate
-                                    </dd>
-                                }
-                                
-                                <dt>
-                                    Статус
-                                </dt>
-                                
-                                <dd>
-                                    @_order.Status
+                                    @_orderShipment.DriverName
                                 </dd>
                                 
                                 <dt>
-                                    Тип Оплаты
+                                    Телефон Водителя
                                 </dt>
                                 
                                 <dd>
-                                    @_order.PaymentType
+                                    @_orderShipment.DriverPhone
                                 </dd>
+                                
+                                <dt>
+                                    Номер Машины
+                                </dt>
+                                
+                                <dd>
+                                    @_orderShipment.CarNumber
+                                </dd>
+                               
                             </dl>
                         </div>
                         <table class="table table-striped table-hover">
                             <thead>
                             <tr>
-                                <th>Наименование товара</th>
+                                <th>Название Товара</th>
                                 <th>Количество</th>
                             </tr>
                             </thead>
                             <tbody class="cursor-pointer">
-                            @foreach (var orderProduct in _order.OrderProducts)
+                            @foreach (var orderProduct in _orderShipment.ShipmentProducts)
                             {   
                                 <tr>
                                     <td>@ProductTypes.First(t => t.Id == orderProduct.ProductTypeId).Name</td>
@@ -91,7 +81,7 @@
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal" @onclick="Close">Отмена</button>
-                <button class="btn btn-danger" @onclick="() => DeleteClick(_order.Id)">
+                <button class="btn btn-danger" @onclick="() => DeleteClick(_orderShipment.Id)">
                     Удалить
                 </button>
             </div>
@@ -116,13 +106,13 @@
     private string _modalDisplay = "none;";
     private string _modalClass = "";
     private bool _showDeleteModal = false;
-    private Order _order = new Order();
+    private OrderShipment _orderShipment = new OrderShipment();
 
     private async Task DeleteClick(int id)
     {
         // TODO: Add some kind of "are you sure" check before this
 
-        await OrderService.Delete(id);
+        await OrderShipmentService.Delete(id);
 
         await OnSaveClick.InvokeAsync(null);
         await Close();
@@ -130,11 +120,11 @@
 
     public async Task Open(int id)
     {
-        Logger.LogInformation("Now loading... /Orders/Delete/{Id}", id);
+        Logger.LogInformation("Now loading... /OrderShipments/Delete/{Id}", id);
 
         await new Css(JSRuntime).HideBodyOverflow();
 
-        _order = await OrderService.GetById(id);
+        _orderShipment = await OrderShipmentService.GetById(id);
 
         _modalDisplay = "block;";
         _modalClass = "Show";
