--- a/src/ArmedMFG.BlazorAdmin/wwwroot/css/admin.css
+++ b/src/ArmedMFG.BlazorAdmin/wwwroot/css/admin.css
@@ -218,7 +218,7 @@ a, .btn-link {
 
     .sidebar {
         width: 250px;
-        height: 100%;
+        height: 100vh;
         position: sticky;
         top: 0;
     }
